Fix spacing

--- a/content/glossaries/glossaries.css
+++ b/content/glossaries/glossaries.css
@@ -48,4 +48,5 @@ h1 {
     right: 0;
     width: 100%;
     height: 100%;
+    border: none;
 }
