--- a/content/loc_admin_review_logs/Admin String Standardization - ES/LARL_ES_style.css
+++ b/content/loc_admin_review_logs/Admin String Standardization - ES/LARL_ES_style.css
@@ -73,19 +73,20 @@ h1 {
     color: var(--bg-3);
     font-size: 2.4rem;
     text-align: center;
-    padding-bottom: 0.5rem;
+    padding: 1rem 0 0.5rem;
     page-break-after: avoid;
 }
 
 h2 {
     color: var(--bg-3);
     page-break-after:avoid;
+    padding: 1rem 0 0.5rem;
 }
 
 h3 {
     color: var(--bg-3);
     page-break-after: avoid;
-    margin: 0.5rem 0rem;
+    padding: 1rem 0 0.5rem;
 }
 
 .text-link {
