--- a/content/loc_style_guides/Localization Style Guide - ES/LSG_ES_style.css
+++ b/content/loc_style_guides/Localization Style Guide - ES/LSG_ES_style.css
@@ -80,14 +80,14 @@ h1 {
     color: var(--bg-3);
     font-size: 2.4rem;
     text-align: center;
-    padding-bottom: 0.5rem;
+    padding: 1rem 0 0.5rem;
     page-break-after: avoid;
 }
 
 h2, h3 {
     color: var(--bg-3);
     page-break-after: avoid;
-    margin: 0.5rem 0rem;
+    padding: 1rem 0 0.5rem;
 }
 
 p {
