--- a/content/marketing_style_guides/Writing Style Guide - PT/MSG_PT_style.css
+++ b/content/marketing_style_guides/Writing Style Guide - PT/MSG_PT_style.css
@@ -80,14 +80,14 @@ h1 {
     color: var(--bg-3);
     font-size: 2.4rem;
     text-align: center;
-    padding-bottom: 0.5rem;
+    padding: 1rem 0 0.5rem;
     page-break-after: avoid;
 }
 
 h2, h3, h4, h5 {
     color: var(--bg-3);
     page-break-after: avoid;
-    margin: 1rem 0rem;
+    padding: 1rem 0 0.5rem;
 }
 
 .text-link {
